# repody

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  DEPLOY-CLOUD.md  DEPLOY.md  DEV.md  Dockerfile.web  Dockerfile.web.dev  LICENSE  README.md  auth.ts  bugsink.edge.config.ts  compose.cloud.yaml  compose.cpu.yaml  compose.dev.yaml  compose.e2e.yaml  compose.glitchtip.yaml  compose.gpu.yaml  compose.lan.yaml  compose.microservices.yaml  compose.observability-traces.yaml  compose.observability.yaml  compose.prod.yaml  compose.public.yaml  compose.scale.yaml  compose.sentry.yaml  compose.yaml  cookies.txt  eslint.config.mjs  headers.txt  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  (+6 more)
backend/: .dockerignore  Dockerfile  pyproject.toml  skills-lock.json
backend/alembic/: env.py
backend/alembic/versions/: 9b24af3aa3c5_initial_schema.py  a1b2c3d4e5f6_dispatch_outbox_attempts.py  a1c2d3e4f5b6_add_run_progress.py  a7b8c9d0e1f2_nuextract_schema_extensions.py  b2c3d4e5f6a7_document_extraction_settings.py  b2c3d4e5f6a7_upload_intents.py  b8c9d0e1f2a3_document_extraction_quality_mode.py  c1d2e3f4a5b6_drop_document_extraction_quality_mode.py  c3d4e5f6a7b8_run_document_mime_type.py  c3d4e5f6a7b8_schema_field_template_type.py  d2e3f4a5b6c7_normalize_extraction_mode.py  d4e5f6a7b8c9_document_extraction_instructions.py  d4e5f6a7b8c9_run_outbox.py  e5f6a7b8c9d0_document_markdown_extraction.py  e5f6a7b8c9d0_document_validation_mode.py  f0a1b2c3d4e5_initial_platform_schema.py  f6a7b8c9d0e1_run_audit_metadata.py  g1h2i3j4k5l6_normalize_legacy_document_modes.py  g7h8i9j0k1l2_outbox_status_index.py  h8i9j0k1l2m3_drop_run_outbox.py  i9j0k1l2m3n4_run_snapshot.py  j0k1l2m3n4o5_normalize_document_modes.py  k1l2m3n4o5p6_hash_api_keys_and_indexes.py  l2m3n4o5p6q7_run_dispatch_outbox.py
backend/benchmark-fixtures/: Facture.benchmark.json
backend/scripts/: auth_oidc_smoke.py  benchmark_dev.py  benchmark_dev_experiments.py  benchmark_dev_queue.py  benchmark_dev_stress.py  benchmark_document_models.py  benchmark_lib.py  benchmark_suite.py  benchmark_ui_route.py  bootstrap_migrations.py  db_reset.py  docker-entrypoint.sh  export_openapi.py  facture_hatchet_e2e.py  generate_facture_fixture.py  hatchet_create_token.py  live_benchmark_cache_e2e.py  live_benchmark_custom_doc.py  platform_integration_suite.py  prod_stress_test.py  warmup_repody_vlm.py
backend/src/audit_workbench/: __init__.py  benchmarking.py  main.py  settings.py
backend/src/audit_workbench/api/: audits.py  auth.py  dashboard.py  deps.py  diagnostics.py  health.py  iam.py  inference.py  metrics.py  models_catalog.py  ocr.py  openapi_config.py  operator.py  platform.py  processing_paths.py  rules_library.py  run_enqueue_http.py  runs.py  (+4 more)
backend/tests/: conftest.py  llm_mocks.py
backend/tests/fixtures/: cih_releve_assertions.py  cih_releve_ground_truth.py
backend/tests/helpers/: db.py  hatchet_sim.py  live_stack.py  oidc_tokens.py  workflow_rules.py
backend/tests/test_api/: test_api_e2e_suite.py  test_document_types_run.py  test_e2e.py  test_live_api_e2e.py  test_operator.py  test_uploads_duplicate.py
backend/tests/test_auth/: test_casbin.py  test_dependencies.py  test_iam.py  test_jwt.py  test_run_create_access.py  test_viewer_rbac_api.py
backend/tests/test_e2e/: facture_helpers.py  test_facture_ui_e2e.py  ui_flow.py
backend/tests/test_extraction/: test_cih_releve_pipeline.py  test_document_extraction_eligibility.py  test_document_models.py  test_document_render.py  test_extraction_profiles.py  test_gpu_cold_start.py  test_markdown_normalize.py  test_nuextract_contract.py  test_ocr_markdown.py  test_parse_fields.py  test_pdf_pages.py  test_pipeline.py  test_processing_paths.py  test_repody_vlm_warmup.py  test_surya_ocr.py  test_template_type_inference.py
backend/tests/test_hatchet/: test_audit_run_input.py
backend/tests/test_inference/: test_llamacpp_runtime.py  test_parallel_doc_extraction.py  test_structured.py  test_vllm_runtime.py
backend/tests/test_observability/: test_bugsink.py  test_glitchtip_logs.py  test_logging.py
backend/tests/test_platform/: test_benchmarking.py  test_live_full_suite.py  test_live_journey.py
backend/tests/test_rules/: test_conditions.py  test_cross_document_validation.py  test_llm_helpers.py  test_logic_evaluator.py  test_rule_syntax.py  test_table_aggregates.py
backend/tests/test_services/: test_admission.py  test_api_keys.py  test_audit_pipeline.py  test_catalog_registry.py  test_catalog_runtime_fields.py  test_dispatch_outbox.py  test_document_model_catalog.py  test_document_slots.py  test_extraction_correctness.py  test_maintenance.py  test_model_runtime_config.py  test_operator_benchmarks.py  test_operator_jobs.py  test_phase1_correctness.py  test_phase2.py  test_phase2_scale.py  test_phase3.py  test_platform_health.py  test_production_guardrails.py  test_rate_limits.py  test_run_lifecycle.py  test_run_lock.py  test_run_persistence_adapter.py  test_run_pool_classifier.py  test_run_processor.py  test_run_progress.py  test_run_snapshot_rules.py  test_run_timeout.py  test_run_use_cases.py  test_settings_package.py  test_taskiq_settings.py  test_upload_and_paths.py  test_worker_pool.py  test_worker_warmup.py  test_workflow_rule_validation.py  test_workflow_schema_validation.py
backend/tests/test_storage/: test_local_storage.py  test_s3_presign.py
backend/tests/test_taskiq/: test_audit_run_input.py
(+880 files in other folders)
