[project]
name = "repody"
version = "0.1.0"
description = "Repody — document audit platform backend"
requires-python = ">=3.12"
dependencies = [
  # Core API
  "fastapi>=0.137.1",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "python-multipart>=0.0.20",
  "sse-starlette>=2.3.3",
  "asgi-correlation-id>=4.3.4",

  # Database
  "sqlalchemy[asyncio]>=2.0.51",
  "asyncpg>=0.30.0",
  "aiosqlite>=0.21.0",
  "alembic>=1.15.0",

  # Queue + cache
  "hatchet-sdk>=1.33.9",
  "redis>=5.2.0",
  "limits[async-redis]>=4.4.1",

  # Structured LLM
  "instructor>=1.15.3",
  "openai>=1.68.0",

  # HTTP + storage
  "httpx>=0.28.0",
  "boto3>=1.43.30",
  "botocore>=1.43.30",
  "filetype>=1.2.0",

  # Rules
  "simpleeval>=1.0.3",

  # Auth (Keycloak JWT + Casbin RBAC)
  "pyjwt[crypto]>=2.10.0",
  "cryptography>=44.0.0",
  "casbin>=1.36.0",

  # Observability + reliability
  "structlog>=25.1.0",
  "sentry-sdk[fastapi]>=2.20.0",
  "opentelemetry-api>=1.31.0",
  "tenacity>=9.0.0",

  # Document preprocessing
  "pillow>=11.1.0",
  "pymupdf>=1.25.0",
]

[project.optional-dependencies]
ml = [
  "torch>=2.5",
  "transformers>=4.46",
  "accelerate>=1.1",
]
dev = [
  "ruff>=0.11.0",
  "pyright>=1.1.389",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "respx>=0.22.0",
  "aiosqlite>=0.21.0",
  "httpx>=0.28.0",
]
otel = [
  "opentelemetry-sdk>=1.31.0",
  "opentelemetry-exporter-otlp-proto-http>=1.31.0",
  "opentelemetry-instrumentation-fastapi>=0.52b0",
  "opentelemetry-instrumentation-httpx>=0.52b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.52b0",
  "opentelemetry-instrumentation-logging>=0.52b0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_workbench"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = [
  # Handled by formatting/readability review; long SQL/HTML/messages are common here.
  "E501",
  # FastAPI intentionally uses Depends/File/Form/Header calls in endpoint defaults.
  "B008",
  # Public exception names are part of the current service interface.
  "N818",
  # Passing timeout through to HTTP clients is intentional in async adapter functions.
  "ASYNC109",
  # PEP 695 generics are not required for this codebase style yet.
  "UP047",
  # Python 3.11-compatible enum spelling is kept for readability and migrations.
  "UP042",
  # Async tests may use pathlib for fixture paths.
  "ASYNC240",
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"tests/test_api/test_api_e2e_suite.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "live: requires running API at E2E_API_URL (default http://localhost:8000)",
  "e2e_facture: Facture.pdf path tests (text / llm / optional vlm)",
  "slow: full document extraction run (Facture PDF pipeline)",
  "vlm: LightOn vision path — slow, opt-in with RUN_VLM_E2E=1",
]
